--- a/css/footer.css
+++ b/css/footer.css
@@ -1,11 +1,13 @@
 footer {
-  background-color: rgb(253, 182, 197);
+  background-color: rgb(239, 211, 217);
   max-height: 100%;
   height: 400px;
   width: 100%;
 }
 
 footer ul {
+  display: flex;
+  justify-content: center;
   padding: 0;
   list-style: none;
   text-align: center;
@@ -28,12 +30,16 @@ footer ul a:hover {
 }
 
 footer .social {
+  display: flex;
+  justify-content: center;
+  gap: 2em;
   text-align: center;
   padding-bottom: 25px;
 }
 
 footer .social > a {
-  font-size: 24px;
+  display: flex;
+  font-size: 54px;
   width: 40px;
   height: 40px;
   line-height: 40px;
@@ -44,18 +50,11 @@ footer .social > a {
   margin: 0 8px;
   color: inherit;
   opacity: 0.75;
+  margin-top: 30px;
 }
 
 footer .social > a:hover {
   opacity: 0.9;
-}
-
-footer .copyright {
-  margin-top: 15px;
-  text-align: center;
-  font-size: 13px;
-  color: #aaa;
-  margin-bottom: 0;
 }
 
 small {
@@ -63,31 +62,26 @@ small {
   justify-content: center;
 }
 
-form input [type="text"] {
-  padding: 10px;
-  font-size: 17px;
-  border: 1px solid black;
-  float: left;
-  width: 50%;
-  background-color: #aaa;
+h2 {
+  display: flex;
+  justify-content: center;
+}
+.email {
+  display: flex;
+  justify-content: center;
+  font-size: 25px;
 }
 
-form button {
-  width: 20%;
-  background-color: #aaa;
-  color: black;
-  font-size: 17px;
-  border: 1px solid grey;
-  border-left: none;
-  cursor: ponter;
+input {
+  width: 40%;
+  height: 50px;
+  background: transparent;
+  border: 5px solid pink;
 }
 
-form button:hover {
-  background-color: bisque;
-}
-
-form::after {
-  content: "";
-  clear: both;
-  display: table;
+button {
+  background: black;
+  font-size: larger;
+  color: #fff;
+  width: 100px;
 }
