--- a/style.css
+++ b/style.css
@@ -68,3 +68,112 @@
   list-style: none;
   color: black;
 }
+
+.product {
+  position: relative;
+  overflow: hidden;
+  padding: 20px;
+}
+
+.latest-posts {
+  padding: 0 10vh;
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 50px;
+  text-transform: capitalize;
+}
+
+.recipe-container {
+  padding: 0 10vh;
+  display: flex;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+}
+
+.recipe-container::-webkit-scrollbar {
+  display: none;
+}
+
+.recipe-card {
+  flex: 0 0 auto;
+  width: 250px;
+  height: 450px;
+  margin-right: 40px;
+}
+
+.recipe-image {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.recipe-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.recipe-btn {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translate(-50%);
+  padding: 10px;
+  width: 90%;
+  text-transform: capitalize;
+  border: none;
+  outline: none;
+  background-color: #fff;
+  color: rgb(228, 137, 198);
+  border-radius: 5px;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.recipe-btn:hover {
+  background-color: pink;
+  color: #fff;
+}
+
+.recipe-info {
+  width: 100%;
+  height: 100%;
+  padding-top: 10px;
+}
+
+.recipe-name {
+  text-transform: uppercase;
+}
+
+.recipe-description {
+  width: 100%;
+  height: 100%;
+  line-height: 20px;
+  overflow: hidden;
+  opacity: 0.5;
+  text-transform: capitalize;
+  margin: 5px 0;
+}
+
+.pre-btn,
+.next-btn {
+  border: none;
+  width: 10vh;
+  height: 100%;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #fff, 100%);
+  cursor: pointer;
+  z-index: 9;
+}
+
+.pre-btn {
+  left: 0;
+  transform: rotate(180deg);
+}
+
+.next-btn {
+  right: 0;
+}
