--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #000;
+  background-color: rgb(249, 221, 221);
   padding-bottom: 100px;
 }
 
@@ -32,7 +32,7 @@ body {
 .form-control,
 textarea {
   max-width: 400px;
-  background-color: #000;
+  background-color: rgb(227, 206, 206);
   color: #fff;
   letter-spacing: 1px;
 }
@@ -43,12 +43,14 @@ textarea {
   width: 400px;
   overflow: hidden;
   transition: all 0.2s ease-in-out;
+  background-color: pink;
 }
 
 .alt-send-button {
   width: 400px;
   height: 34px;
   transition: all 0.2s ease-in-out;
+  color: rgb(0, 0, 0);
 }
 
 .send-text {
@@ -158,7 +160,7 @@ textarea {
 }
 
 .social-media li:hover a {
-  color: #000;
+  color: rgb(255, 135, 255);
 }
 
 hr {
