--- a/css/contact.css
+++ b/css/contact.css
@@ -10,7 +10,7 @@ body {
   height: 100%;
 }
 
-.contact-wrapper {
+.contact-box {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
