added card-slider to home page

--- a/css/layout.css
+++ b/css/layout.css
@@ -5,7 +5,7 @@
  * @example https://fed-vocational-astro-course.vercel.app/en/html-css/module-3/css-grids
  */
 
-body {
+/* body {
   margin: 0;
   width: 100%;
   min-width: 320px;
@@ -52,4 +52,4 @@ body {
   width: 100%;
   max-width: 1000px;
   margin: 40px auto 0 auto;
-}
+} */
