--- a/css/blog.css
+++ b/css/blog.css
@@ -11,16 +11,17 @@ h1 {
 .blog-section {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   margin: 1em;
   border-radius: 1em;
+  flex-wrap: wrap;
 }
 
 .container {
   display: flex;
   flex-direction: column;
   text-decoration: none;
-  width: 400px;
+  width: 500px;
+  height: 50%;
   max-width: 400px;
   background-color: rgb(239, 211, 217);
   padding: 1.25rem;
@@ -34,7 +35,7 @@ h1 {
   color: black;
 }
 
-.container p {
+.blog-section p {
   font-size: 20px;
 }
 
