--- a/css/cards2.css
+++ b/css/cards2.css
@@ -27,11 +27,12 @@ h3 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  background: pink;
-  max-width: 50rem;
+  background: rgb(243, 231, 233);
+  max-width: 30rem;
   width: 100%;
   height: 100%;
   overflow: hidden;
+  border: 5px solid rgb(255, 0, 183);
   margin-left: 5%;
 }
 
@@ -49,7 +50,6 @@ h3 {
   background: pink;
   border-radius: 0.6rem;
   font-weight: 700;
-  border: 0.35rem solid;
   text-decoration: none;
 }
 
@@ -84,6 +84,7 @@ h3 {
 
 a {
   text-decoration: none;
+  margin-bottom: 10px;
 }
 
 .collage-img {
