--- a/css/about.css
+++ b/css/about.css
@@ -10,6 +10,7 @@ header {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-bottom: 10rem;
 }
 
 p {
@@ -17,4 +18,10 @@ p {
   justify-self: center;
   max-width: 900px;
   font-size: 25px;
+}
+
+.about-image {
+  border-radius: 50%;
+  width: 30rem;
+  height: 30rem;
 }
