--- a/css/cards2.css
+++ b/css/cards2.css
@@ -32,8 +32,12 @@ h3 {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  border: 5px solid rgb(255, 0, 183);
+  border: 5px solid rgb(242, 55, 114);
   margin-left: 5%;
+}
+
+.recipe-card:hover {
+  max-width: 31rem;
 }
 
 .recipe-card img {
