--- a/style.css
+++ b/style.css
@@ -216,3 +216,67 @@ input:checked + .slider:before {
   display: flex;
   justify-content: center;
 }
+
+.title-main {
+  display: flex;
+  justify-content: center;
+}
+
+.dessert-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: row;
+  gap: 1em;
+}
+.dessert-card {
+  width: 450px;
+  height: 650px;
+}
+
+.dessert-card img {
+  width: 100%;
+  height: 80%;
+  border-radius: 8px;
+}
+
+.dessert-card h2 {
+  margin-top: 10px;
+  font-size: 35px;
+  color: black;
+}
+
+.food-list ul li {
+  display: flex;
+  flex-wrap: wrap;
+  text-decoration: none;
+  justify-content: center;
+  list-style: none;
+  border: 2px solid rgb(255, 81, 0);
+  border-radius: 10px;
+  max-width: 10em;
+  width: 7em;
+  font-size: 30px;
+}
+
+.food-list a {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: row;
+  color: rgb(255, 81, 0);
+}
+
+.food-list ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: row;
+  gap: 3em;
+}
+
+.food-list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
