--- a/css/details.css
+++ b/css/details.css
@@ -26,7 +26,7 @@ h2 {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 80em;
   text-decoration: none;
   background-color: rgb(243, 224, 227);
   padding: 1.25rem;
@@ -38,7 +38,7 @@ h2 {
 img {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 60em;
 }
 
 .container p {
