--- a/css/blog.css
+++ b/css/blog.css
@@ -20,6 +20,7 @@ h1 {
   display: flex;
   flex-direction: column;
   text-decoration: none;
+  justify-content: center;
   width: 500px;
   height: 50%;
   max-width: 400px;
