--- a/css/blog.css
+++ b/css/blog.css
@@ -11,6 +11,7 @@ h1 {
 .card-section {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   margin: 1em;
   border-radius: 1em;
   flex-wrap: wrap;
