--- a/css/blog.css
+++ b/css/blog.css
@@ -12,6 +12,7 @@ h1 {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   margin: 1em;
   border-radius: 1em;
   flex-wrap: wrap;
