--- a/style.css
+++ b/style.css
@@ -257,6 +257,7 @@ input:checked + .slider:before {
 
 .food-list a {
   display: flex;
+  margin-top: 1em;
   flex-wrap: wrap;
   justify-content: center;
   flex-direction: row;
