--- a/css/blog.css
+++ b/css/blog.css
@@ -11,7 +11,7 @@ h1 {
 .blog-section {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-items: center;
   align-items: center;
   margin: 1em;
   border-radius: 1em;
