--- a/css/blog.css
+++ b/css/blog.css
@@ -16,6 +16,8 @@ h1 {
   margin: 1em;
   border-radius: 1em;
   flex-wrap: wrap;
+  width: 30em;
+  height: 30em;
 }
 
 .container {
@@ -25,7 +27,7 @@ h1 {
   justify-content: center;
   align-items: center;
   width: 500px;
-  height: 50%;
+  height: 10em%;
   max-width: 400px;
   background-color: rgb(239, 211, 217);
   padding: 1.25rem;
