--- a/css/blog.css
+++ b/css/blog.css
@@ -26,8 +26,8 @@ h1 {
   text-decoration: none;
   justify-content: center;
   align-items: center;
-  width: 500px;
-  height: 10em%;
+  width: 30em;
+  height: 10em;
   max-width: 400px;
   background-color: rgb(239, 211, 217);
   padding: 1.25rem;
