--- a/css/blog.css
+++ b/css/blog.css
@@ -24,8 +24,8 @@ h1 {
   text-decoration: none;
   justify-content: center;
   align-items: center;
-  width: 30em;
-  height: 30em;
+  width: 500px;
+  height: 50%;
   max-width: 400px;
   background-color: rgb(239, 211, 217);
   padding: 1.25rem;
