--- a/css/blog.css
+++ b/css/blog.css
@@ -25,7 +25,7 @@ h1 {
   justify-items: center;
   align-items: center;
   width: 500px;
-  height: 30%;
+  height: 400px;
   max-width: 400px;
   background-color: rgb(239, 211, 217);
   padding: 1.25rem;
