--- a/css/blog.css
+++ b/css/blog.css
@@ -12,7 +12,7 @@ h1 {
   display: flex;
   flex-direction: row;
   justify-items: center;
-  align-items: center;
+  align-content: center;
   margin: 1em;
   border-radius: 1em;
   flex-wrap: wrap;
@@ -24,9 +24,8 @@ h1 {
   text-decoration: none;
   justify-items: center;
   align-items: center;
-  width: 500px;
+  max-width: 500px;
   height: 400px;
-  max-width: 400px;
   background-color: rgb(239, 211, 217);
   padding: 1.25rem;
   color: rgb(0, 0, 0);
