--- a/css/blog.css
+++ b/css/blog.css
@@ -10,9 +10,8 @@ h1 {
 
 .blog-section {
   display: flex;
-  justify-self: center;
+  align-items: center;
   flex-direction: row;
-  align-content: center;
   margin: 1em;
   border-radius: 1em;
   flex-wrap: wrap;
