--- a/css/blog.css
+++ b/css/blog.css
@@ -10,7 +10,7 @@ h1 {
 
 .blog-section {
   display: flex;
-  justify-items: center;
+  justify-items: center center;
   flex-direction: row;
   margin: 1em;
   border-radius: 1em;
