--- a/css/blog.css
+++ b/css/blog.css
@@ -10,7 +10,8 @@ h1 {
 
 .blog-section {
   display: flex;
-  justify-content: center;
+  justify-items: center;
+  align-items: center;
   flex-direction: row;
   margin: 1em;
   border-radius: 1em;
