--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: rgb(249, 221, 221);
+  background-color: #fff;
   padding-bottom: 100px;
 }
 
