--- a/css/contact.css
+++ b/css/contact.css
@@ -31,7 +31,7 @@ body {
 
 .form-control,
 textarea {
-  max-width: 400px;
+  max-width: 60em;
   background-color: #fff;
   color: black;
   letter-spacing: 1px;
