--- a/css/contact.css
+++ b/css/contact.css
@@ -12,13 +12,14 @@ body {
 
 .contact-box {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
   margin: 0 auto;
   margin-bottom: 100px;
   padding: 20px;
   position: relative;
-  max-width: 85em;
+  max-width: 50em;
   border: 2px solid pink;
   border-radius: 40px 40px 40px 40px;
 }
