--- a/css/blog.css
+++ b/css/blog.css
@@ -17,6 +17,10 @@ h1 {
   flex-wrap: wrap;
 }
 
+.cards {
+  display: flex;
+  justify-content: center;
+}
 .container {
   display: flex;
   flex-direction: column;
