--- a/css/blog.css
+++ b/css/blog.css
@@ -16,8 +16,12 @@ h1 {
   border-radius: 1em;
   flex-wrap: wrap;
   justify-content: center;
+  column-gap: 32px;
+  row-gap: 32px;
 }
-
+.blog-img {
+  object-fit: cover;
+}
 .container {
   display: flex;
   flex-direction: column;
