--- a/css/contact.css
+++ b/css/contact.css
@@ -1,71 +1,60 @@
-body {
-  margin: 0;
-  padding: 0;
-  background-color: #fff;
-  padding-bottom: 100px;
+header {
+  background-image: url(/assets/food-background.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 300px;
 }
 
-#contact {
+h1 {
+  display: flex;
+  justify-content: center;
+  font-size: 50px;
+}
+
+.h2-contact {
+  font-size: 50px;
+}
+
+label {
+  font-size: larger;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+}
+.contact-main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  max-width: 100%;
   width: 100%;
   height: 100%;
+  padding: 100px;
+  gap: 0.5em;
+  color: rgb(4, 0, 0);
+  font-size: 30px;
 }
 
-.contact-box {
+.contact-main input {
+  height: 2em;
+  border: 5px solid pink;
+}
+
+.contact-info {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: 0 auto;
-  margin-bottom: 100px;
-  padding: 20px;
-  position: relative;
-  max-width: 50em;
-  border: 2px solid pink;
-  border-radius: 40px 40px 40px 40px;
+  justify-content: center;
 }
 
-.form-horizontal {
-  max-width: 100%;
-  font-family: "Lato";
-  font-weight: 400;
-}
-
-.form-control,
 textarea {
-  max-width: 60em;
-  background-color: #fff;
-  color: black;
-  letter-spacing: 1px;
+  width: 40%;
 }
 
-.send-button {
-  margin-top: 15px;
-  height: 34px;
-  width: 400px;
-  overflow: hidden;
-  transition: all 0.2s ease-in-out;
-  background-color: pink;
-}
-
-.alt-send-button {
-  width: 400px;
-  height: 34px;
-  transition: all 0.2s ease-in-out;
-  color: rgb(0, 0, 0);
-}
-
-.send-text {
-  display: block;
-  margin-top: 10px;
-  font: 700 12px "Lato", sans-serif;
-  letter-spacing: 2px;
-}
-
-.alt-send-button:hover {
-  transform: translate3d(0px, -29px, 0px);
-}
-
-.contact-container {
-  max-width: 400px;
+.validationerror {
+  color: red;
+  display: none;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  font-size: smaller;
 }
 
 .contact-list {
@@ -75,6 +64,8 @@ textarea {
 }
 
 .list-item {
+  display: flex;
+  justify-content: center;
   line-height: 4;
   color: rgb(34, 32, 32);
 }
