--- a/css/about.css
+++ b/css/about.css
@@ -24,9 +24,16 @@ p {
   border-radius: 50%;
   width: 30rem;
   height: 30rem;
+  margin-top: 20px;
 }
 
 .aboutpage-image {
   display: flex;
   justify-content: center;
+}
+
+.line3 {
+  display: flex;
+  width: 50%;
+  border: 3px solid black;
 }
