--- a/css/blog.css
+++ b/css/blog.css
@@ -80,3 +80,28 @@ a {
   text-decoration: underline;
   list-style: none;
 }
+
+.loading-buttons {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+#more-button {
+  padding: 10px 20px;
+  background-color: pink;
+  color: black;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#more-button:hover {
+  background-color: rgb(239, 189, 240);
+}
+
+#more-button:active {
+  background-color: rgb(239, 189, 240);
+}
