changed font size

--- a/style.css
+++ b/style.css
@@ -96,11 +96,10 @@
 
 .header-main {
   display: flex;
+  justify-content: center;
   margin-top: 50px;
-  margin-left: 1em;
-  font-size: 20px;
-  background-color: rgb(247, 217, 222);
-  width: 7em;
+  justify-items: center;
+  font-size: 25px;
 }
 
 .line2 {
