--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@
   margin-top: 50px;
   justify-items: center;
   font-size: 25px;
+  text-decoration: underline;
 }
 
 .line2 {
@@ -252,6 +253,7 @@ input:checked + .slider:before {
   max-width: 10em;
   width: 7em;
   font-size: 30px;
+  margin-top: 15px;
 }
 
 .food-list a {
