--- a/css/cards2.css
+++ b/css/cards2.css
@@ -49,7 +49,7 @@ h3 {
 .recipe-info a {
   display: flex;
   justify-content: center;
-  color: black;
+  color: rgb(20, 19, 19);
   text-decoration: none;
   background: pink;
   border-radius: 0.6rem;
